--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,24 @@
 {
-    "background_color": "#ffffff",
-    "description": "Use together with Microsoft Edge ReadAloud",
-    "dir": "ltr",
-    "display": "browser",
-    "name": "edgereadaloud.github",
-    "orientation": "any",
-    "scope": "/",
-    "short_name": "edgereadaloud.github",
-    "start_url": "/",
-    "theme_color": "#ffffff",
-    "icons": [
-      {
-        "src": "/images/favicon.svg",
-        "type": "image/x-icon",
-        "purpose": "maskable"
-      }
-    ]
-  }
+  "background_color": "#ffffff",
+  "description": "Use together with Microsoft Edge ReadAloud",
+  "dir": "ltr",
+  "display": "browser",
+  "name": "edgereadaloud.github",
+  "orientation": "any",
+  "scope": "/",
+  "short_name": "edgereadaloud.github",
+  "start_url": "/",
+  "theme_color": "#ffffff",
+  "icons": [
+    {
+      "src": "/favicon.svg",
+      "type": "image/x-icon",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/favicon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
+}
